@@ -1,27 +1,17 @@
 package no.ding.pk.service.cache;
 
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import no.ding.pk.domain.cache.CacheObject;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import com.github.benmanes.caffeine.cache.Cache;
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.LoadingCache;
-
-import no.ding.pk.domain.cache.CacheObject;
-import no.ding.pk.service.offer.MaterialService;
-import no.ding.pk.service.sap.SapMaterialService;
+import java.util.*;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Component
 public class PingInMemory3DCache<K, T, V> implements InMemory3DCache<K, T, V> {
@@ -31,38 +21,33 @@ public class PingInMemory3DCache<K, T, V> implements InMemory3DCache<K, T, V> {
     
     private Date expires;
 
-    // private final Map<K, InMemory2DCache<T, CacheObject<V>>> cacheMap;
     private final Map<K, Cache<T, CacheObject<V>>> cacheMap;
     
     public PingInMemory3DCache(@Value("${cache.max.amount.items:5000}") Integer capacity) {
         this.capacity = capacity;
         log.debug("Max item cache size: {}", this.capacity);
-        // cacheMap = new HashMap<K, InMemory2DCache<T, CacheObject<V>>>();
-        cacheMap = new HashMap<K, Cache<T, CacheObject<V>>>();
+        cacheMap = new HashMap<>();
     }
     
     public void put(K groupKey, T objectKey, V value) {
         synchronized (cacheMap) {
             if(!cacheMap.containsKey(groupKey)) {
-                // InMemory2DCache<T, CacheObject<V>> cache = new PingInMemory2DCache<>();
                 Cache<T, CacheObject<V>> caffeine = Caffeine.newBuilder()
                 .maximumSize(capacity)
-                .expireAfterWrite(1, TimeUnit.HOURS)
+                .expireAfterWrite(1, TimeUnit.DAYS)
                 .build();
                 
                 cacheMap.put(groupKey, caffeine);
             }
             
-            CacheObject<V> cacheObject;
+            CacheObject<V> cacheObject = new CacheObject<>();
             if(cacheMap.get(groupKey).getIfPresent(objectKey) != null) {
-                if(cacheMap.get(groupKey).getIfPresent(objectKey).getValue().equals(value)) {
+                if(Objects.requireNonNull(cacheMap.get(groupKey).getIfPresent(objectKey)).getValue().equals(value)) {
                     log.debug("Group {} already contains objectKey {} and given object.", groupKey, objectKey);
                     return;
                 }
 
                 cacheObject = cacheMap.get(groupKey).getIfPresent(objectKey);
-            } else {
-                cacheObject = new CacheObject<>();
             }
             
             cacheObject.setValue(value);
@@ -78,11 +63,16 @@ public class PingInMemory3DCache<K, T, V> implements InMemory3DCache<K, T, V> {
 
     public V get(K groupKey, T key) {
         synchronized (cacheMap) {
+            log.debug("Getting cached instance for groupKey {} and key {}", groupKey, key);
             if(!cacheMap.containsKey(groupKey) || cacheMap.get(groupKey).getIfPresent(key) == null) {
                 return null;
             }
             
             CacheObject<V> c = cacheMap.get(groupKey).getIfPresent(key);
+
+            if(c == null) {
+                return null;
+            }
             c.accessed++;
             
             c.setLastAccessed(System.currentTimeMillis());
@@ -93,10 +83,10 @@ public class PingInMemory3DCache<K, T, V> implements InMemory3DCache<K, T, V> {
     public List<V> getAllInList(K groupKey) {
         synchronized (cacheMap) {
             if(cacheMap.get(groupKey) != null) {
-                List<CacheObject<V>> all = cacheMap.get(groupKey).asMap().entrySet().stream().map(obj -> obj.getValue()).collect(Collectors.toList());
+                List<CacheObject<V>> all = cacheMap.get(groupKey).asMap().values().stream().toList();
 
                 if(!all.isEmpty()) {
-                    return all.stream().map(obj -> obj.getValue()).collect(Collectors.toList());
+                    return all.stream().map(CacheObject::getValue).collect(Collectors.toList());
                 }
             }
             
@@ -135,6 +125,25 @@ public class PingInMemory3DCache<K, T, V> implements InMemory3DCache<K, T, V> {
             }
             
             return false;
+        }
+    }
+
+    @Override
+    public List<V> searchFor(K groupKey, T partialObjectKey) {
+        synchronized (cacheMap) {
+            List<V> returnList = new ArrayList<>();
+            Map<T, CacheObject<V>> allPresent = cacheMap.get(groupKey).getAllPresent(cacheMap.get(groupKey).asMap().keySet());
+            for (T t : allPresent.keySet()) {
+                if(((String) t).contains((CharSequence) partialObjectKey)) {
+                    CacheObject<V> ifPresent = cacheMap.get(groupKey).getIfPresent(t);
+                    if(ifPresent != null) {
+                        V value = ifPresent.getValue();
+
+                        returnList.add(value);
+                    }
+                }
+            }
+            return returnList;
         }
     }
     
