@@ -2,9 +2,11 @@ package no.ding.pk.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import no.ding.pk.config.DiscountServiceConfig;
+import no.ding.pk.config.AbstractIntegrationConfig;
 import no.ding.pk.domain.Discount;
 import no.ding.pk.domain.DiscountLevel;
+import no.ding.pk.repository.DiscountLevelRepository;
+import no.ding.pk.repository.DiscountRepository;
 import org.apache.commons.io.IOUtils;
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -12,8 +14,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -25,26 +25,30 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.greaterThan;
-import static org.hamcrest.Matchers.greaterThanOrEqualTo;
+import static org.hamcrest.Matchers.*;
+import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.hamcrest.collection.IsEmptyCollection.empty;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsNot.not;
 import static org.hamcrest.text.IsEmptyString.emptyOrNullString;
 
-@Disabled("Need to isolate the scope")
-@ActiveProfiles({"test"})
-@SpringJUnitConfig({DiscountServiceConfig.class})
-public class DiscountServiceImplTest {
+@Disabled
+public class DiscountServiceImplTest extends AbstractIntegrationConfig {
 
     @Autowired
+    private DiscountRepository discountRepository;
+
+    @Autowired
+    private DiscountLevelRepository discountLevelRepository;
+
     private DiscountService service;
 
     private List<Discount> testData;
 
     @BeforeEach
     public void setup() throws IOException {
+        service = new DiscountServiceImpl(discountRepository, discountLevelRepository);
+
         ClassLoader classLoader = getClass().getClassLoader();
         // OBS! Remember to package the project for the test to find the resource file in the test-classes directory.
         File file = new File(Objects.requireNonNull(classLoader.getResource("discounts_simple.json")).getFile());
@@ -77,11 +81,8 @@ public class DiscountServiceImplTest {
 
     @Test
     public void shouldSaveDiscountObjectWithDiscountLevels() {
-        Discount expected = Discount.builder()
-                .salesOrg("100")
-                .materialNumber("Test")
+        Discount expected = Discount.builder("100", "100", "Test", 1234.0, new ArrayList<>())
                 .materialDesignation("Test")
-                .standardPrice(1234.0)
                 .build();
 
         Discount actual = service.save(expected);
@@ -91,11 +92,8 @@ public class DiscountServiceImplTest {
 
     @Test
     public void shouldBeAbleToAddDiscountLevelToDiscountWithMissingCalculatedDiscountAndPctSet() {
-        Discount expected = Discount.defaultBuilder()
-                .salesOrg("100")
-                .materialNumber("Test2")
+        Discount expected = Discount.builder("100", "100", "Test2", 1234.0, new ArrayList<>())
                 .materialDesignation("Test2")
-                .standardPrice(1234.0)
                 .build();
 
         expected.setDiscountLevels(new ArrayList<>());
@@ -121,7 +119,7 @@ public class DiscountServiceImplTest {
 
         assertThat(actual.size(), greaterThan(0));
 
-        assertThat(actual.get(0).getZone(), equalTo("01"));
+        assertThat(actual.get(0).getDiscountLevels().get(0).getZone(), equalTo(1));
     }
 
     @Test
@@ -147,17 +145,28 @@ public class DiscountServiceImplTest {
         addMissingDiscounts();
 
         List<String> materialNumbers = List.of("113103");
-        List<DiscountLevel> actual = service.findAllDiscountLevelsForDiscountBySalesOrgAndMaterialNumber("100", materialNumbers.get(0), null);
+        List<DiscountLevel> actual = service.findAllDiscountLevelsForDiscountBySalesOrgAndSalesOfficeAndMaterialNumber("100", "100", materialNumbers.get(0), null);
 
         assertThat(actual.size(), greaterThanOrEqualTo(5));
     }
 
-    private void addMissingDiscounts() {
-        List<String> toPersist = service.findAll().stream().map(Discount::getMaterialNumber).collect(Collectors.toList());
+    @Test
+    public void shouldFindAllDiscountsInListForSalesOrgAndSalesOffice() {
+        addMissingDiscounts();
+
+        List<String> materialNumbers = List.of("113103");
+        List<Discount> actual = service.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn("100", "100", materialNumbers);
+
+        assertThat(actual, hasSize(1));
+
+    }
+
+    protected void addMissingDiscounts() {
+        List<String> toPersist = service.findAll().stream().map(Discount::getMaterialNumber).toList();
 
         List<Discount> discounts = testData.stream().filter(discount -> !toPersist.contains(discount.getMaterialNumber())).collect(Collectors.toList());
 
-        if(discounts.size() > 0) {
+        if(!discounts.isEmpty()) {
             service.saveAll(discounts);
         }
     }
